--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 		<title>{{site.title}}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.url }}" />
-		<link rel="stylesheet" href="{{ '/assets/css/my-stylesheet.css' | prepend: site.url }}" />
+		<link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css" />
+		<link rel="stylesheet" href="{{site.baseurl}}/assets/css/my-stylesheet.css" />
 	</head>
 	<body class="is-preload">
 
