--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="{{site.baseurl}}/images/pic04.jpg" alt="" /></span>
 							<h1 id="title">{{site.title}}</h1>
 							<p>Master of International Affairs, Columbia University</p>
 						</div>
@@ -64,13 +64,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="/assets/js/jquery.min.js"></script>
-			<script src="/assets/js/jquery.scrolly.min.js"></script>
-			<script src="/assets/js/jquery.scrollex.min.js"></script>
-			<script src="/assets/js/browser.min.js"></script>
-			<script src="/assets/js/breakpoints.min.js"></script>
-			<script src="/assets/js/util.js"></script>
-			<script src="/assets/js/main.js"></script>
+			<script src="{{site.baseurl}}/assets/js/jquery.min.js"></script>
+			<script src="{{site.baseurl}}/assets/js/jquery.scrolly.min.js"></script>
+			<script src="{{site.baseurl}}/assets/js/jquery.scrollex.min.js"></script>
+			<script src="{{site.baseurl}}/assets/js/browser.min.js"></script>
+			<script src="{{site.baseurl}}/assets/js/breakpoints.min.js"></script>
+			<script src="{{site.baseurl}}/assets/js/util.js"></script>
+			<script src="{{site.baseurl}}/assets/js/main.js"></script>
 
 	</body>
 </html>
