--- a/_includes/data-visualization.html
+++ b/_includes/data-visualization.html
@@ -13,7 +13,7 @@
         {% for post in site.posts %}
         <div class="col-4 col-12-mobile">
             <article class="item">
-                <a href="{{ site.baseurl }}{{ post.url }}" class="image fit"><img src="{{ site.baseurl }}{{ post.cover-image }}" alt=""></a>
+                <a href="{{ site.baseurl }}{{ post.url }}" class="image fit"><img src="{{ site.baseurl }}/{{ post.cover-image }}" alt=""></a>
                 <header>
                     <a href="{{ site.baseurl }}{{ post.url }}" class="image fit"><h3>{{ post.title }}</h3></a>
                 </header>
