--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,8 +5,13 @@
         <header>
             <h2>Publications</h2>
         </header>
+
+        {% for publication in site.categories.publications %}
+            <a href="{{ site.baseurl }}{{ publication.url }}" class="image featured"><img src="{{ site.baseurl }}/{{ publication.cover-image }}" alt="" /></a>
+            <header><h3>{{ publication.title }}</h3></header>
+        {% endfor %}
         
-        <svg viewBox="0 0 240 80" xmlns="http://www.w3.org/2000/svg">
+        <!-- <svg viewBox="0 0 240 80" xmlns="http://www.w3.org/2000/svg">
             <style>
                 .small { font: italic 13px sans-serif; }
                 .heavy { font: bold 30px sans-serif; }
@@ -37,21 +42,20 @@
             <text x="55" y="55" class="small"><a href="Publications/US-China-Trade-War-Supply-Chain/index.html">read more</a></text>
             <text x="65" y="40" class="small"></text>
             </svg>
-            
+             -->
 
-        <a href="Publications/US-Elections/index.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-        <header><h3>New U.S. president elected, Americans still confused</h3>
 
+
+        <!-- <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
         <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-        <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-        <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+        <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
 
 
-        <p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
+        <!-- <p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
         ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
         laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
         parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-        dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec.</p>
+        dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec.</p> -->
 
     </div>
 </section>
