--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,63 +14,9 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Header -->
-			<div id="header">
-
-				<div class="top">
-
-					<!-- Logo -->
-						<div id="logo">
-							<span class="image avatar48"><img src="{{site.baseurl}}/images/pic04.jpg" alt="" /></span>
-							<h1 id="title">{{site.title}}</h1>
-							<p>Master of International Affairs, Columbia University</p>
-						</div>
-
-					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="#top" id="top-link"><span class="icon fa-home">About</span></a></li>
-								<li><a href="#DataVisualization" id="portfolio-link"><span class="icon fa-th">Data Visualization</span></a></li>
-								<li><a href="#Publications" id="about-link"><span class="icon fa-user">Publications</span></a></li>
-								<li><a href="#Contact" id="contact-link"><span class="icon fa-envelope">Contact</span></a></li>
-							</ul>
-						</nav>
-
-				</div>
-				<div class="bottom">
-
-					<!-- Social Icons -->
-						<ul class="icons">
-							<li><a href="https://twitter.com/changtuizhu" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/changtuizhu?ref=bookmarks" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.linkedin.com/in/lei-zhu-2019/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="lz2695@columbia.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-
-				</div>
-
-            </div>
-            
-            {{content}}
-
-		<!-- Footer -->
-			<div id="footer">
-
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Sophia Zhu. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="{{site.baseurl}}/assets/js/jquery.min.js"></script>
-			<script src="{{site.baseurl}}/assets/js/jquery.scrolly.min.js"></script>
-			<script src="{{site.baseurl}}/assets/js/jquery.scrollex.min.js"></script>
-			<script src="{{site.baseurl}}/assets/js/browser.min.js"></script>
-			<script src="{{site.baseurl}}/assets/js/breakpoints.min.js"></script>
-			<script src="{{site.baseurl}}/assets/js/util.js"></script>
-			<script src="{{site.baseurl}}/assets/js/main.js"></script>
-
+		{{content}}
+		
+		{% include footer.html %}
+		{% include scripts.html %}
 	</body>
 </html>
